Adds api-key header authorization to swagger. (#7)
Also adds a health check endpoint.
