# models/models_role_i_ds_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ModelsRoleIDsResponse models role i ds response
+//
+// swagger:model models.RoleIDsResponse
+type ModelsRoleIDsResponse struct {
+
+	// roles
+	Roles []string `json:"roles"`
+}
+
+// Validate validates this models role i ds response
+func (m *ModelsRoleIDsResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this models role i ds response based on context it is used
+func (m *ModelsRoleIDsResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ModelsRoleIDsResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ModelsRoleIDsResponse) UnmarshalBinary(b []byte) error {
+	var res ModelsRoleIDsResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
